--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
-    "knex": "^0.20.11",
+    "express": "^4.17.1",
+    "knex": "^0.20.15",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.3"
   }
 }
